Release v1.4.0 (#24)
supported elasticsearch v2.4 and changed configuration key "io.personium" #21  #22