@@ -3,7 +3,7 @@
     <groupId>com.fujitsu.dc</groupId>
     <artifactId>dc1-engine</artifactId>
     <packaging>war</packaging>
-    <version>1.3.25</version>
+    <version>1.4.0</version>
     <name>dc1-engine Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <licenses>
@@ -13,6 +13,22 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <properties>
+        <com.fujitsu.dc.engine.defaultBaseUrl>http://localhost</com.fujitsu.dc.engine.defaultBaseUrl>
+        <com.fujitsu.dc.engine.debug>true</com.fujitsu.dc.engine.debug>
+        <logpath>dc1-engine.log</logpath>
+        <loglevel>debug</loglevel>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <com.fujitsu.dc.engine.jerseyTest.baseUrl>http://localhost:9998/test/</com.fujitsu.dc.engine.jerseyTest.baseUrl>
+        <com.fujitsu.dc.engine.jerseyTest.useCouchdb>false</com.fujitsu.dc.engine.jerseyTest.useCouchdb>
+                <java.source.version>1.8</java.source.version>
+                <java.target.version>1.8</java.target.version>
+                <logback.version>1.0.13</logback.version>
+                <slf4j.version>1.7.6</slf4j.version>
+                <esapi.version>2_4</esapi.version>
+                <logback.version>1.0.13</logback.version>
+                <jacoco.include.package>com.fujitsu.*</jacoco.include.package>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>joda-time</groupId>
@@ -22,22 +38,22 @@
         <dependency>
             <groupId>com.fujitsu.dc</groupId>
             <artifactId>dc1-client</artifactId>
-            <version>1.3.25</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.fujitsu.dc</groupId>
             <artifactId>dc1-es-api-${esapi.version}</artifactId>
-            <version>1.3.25</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.fujitsu.dc</groupId>
             <artifactId>dc1-common</artifactId>
-            <version>1.3.25</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.fujitsu.dc</groupId>
             <artifactId>dc1-engine-extension-common</artifactId>
-            <version>1.3.25</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -47,7 +63,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -202,10 +218,10 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.5.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>${java.source.version}</source>
+                    <target>${java.target.version}</target>
                     <encoding>UTF-8</encoding>
                     <debug>true</debug>
                     <optimize>false</optimize>
@@ -214,9 +230,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.19.1</version>
                 <configuration>
-                    <argLine>-XX:-UseSplitVerifier</argLine>
+                    <argLine>${jacocoArgs} -XX:-UseSplitVerifier</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -225,14 +241,9 @@
                 <version>2.0</version>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.5.1</version>
                 <configuration>
                     <locales>ja</locales>
                     <inputEncoding>UTF-8</inputEncoding>
@@ -260,6 +271,26 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.7.201606060606</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <propertyName>jacocoArgs</propertyName>
+                            <includes>
+                                <include>${jacoco.include.package}</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <reporting>
@@ -276,6 +307,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
                     <outputEncoding>UTF-8</outputEncoding>
                     <inputEncoding>UTF-8</inputEncoding>
@@ -285,29 +317,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.12</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>report-only</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <configuration>
-                    <formats>
-                        <format>xml</format>
-                        <format>html</format>
-                    </formats>
-                </configuration>
+                <version>2.19.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.13</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <configLocation>dc-checks.xml</configLocation>
@@ -324,7 +339,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.3</version>
+                <version>3.0.3</version>
                 <configuration>
                     <effort>Max</effort>
                     <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
@@ -335,9 +350,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>3.6</version>
                 <configuration>
-                    <targetJdk>${java.version}</targetJdk>
+                    <targetJdk>${java.source.version}</targetJdk>
                 </configuration>
             </plugin>
             <plugin>
@@ -348,23 +363,12 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>javancss-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </reporting>
-    <properties>
-        <com.fujitsu.dc.engine.defaultBaseUrl>http://localhost</com.fujitsu.dc.engine.defaultBaseUrl>
-        <com.fujitsu.dc.engine.debug>true</com.fujitsu.dc.engine.debug>
-        <logpath>dc1-engine.log</logpath>
-        <loglevel>debug</loglevel>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <com.fujitsu.dc.engine.jerseyTest.baseUrl>http://localhost:9998/test/</com.fujitsu.dc.engine.jerseyTest.baseUrl>
-        <com.fujitsu.dc.engine.jerseyTest.useCouchdb>false</com.fujitsu.dc.engine.jerseyTest.useCouchdb>
-                <java.version>1.7</java.version>
-                <jvm.option>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:-UseSplitVerifier</jvm.option>
-                <logback.version>1.0.13</logback.version>
-                <slf4j.version>1.7.6</slf4j.version>
-                <esapi.version>1_2</esapi.version>
-                <logback.version>1.0.13</logback.version>
-            </properties>
     <repositories>
         <repository>
           <id>personium.io</id>
